--- a/pom.xml
+++ b/pom.xml
@@ -30,14 +30,21 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 
 		<dependency>
@@ -47,7 +54,6 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- open api codegen -->
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
@@ -88,7 +94,7 @@
 							<goal>generate</goal>
 						</goals>
 						<configuration>
-							<inputSpec>${project.basedir}/src/main/resources/api.yml</inputSpec>
+							<inputSpec>${project.basedir}/src/main/resources/price-api.yml</inputSpec>
 							<language>spring</language>
 							<output>${project.build.directory}/generated-sources/</output>
 							<generateSupportingFiles>false</generateSupportingFiles>
@@ -98,8 +104,6 @@
 								<interfaceOnly>true</interfaceOnly>
 								<useTags>true</useTags>
 							</configOptions>
-							<invokerPackage>com.swagger.client.codegen.rest.invoker</invokerPackage>
-							<generateApiTests>false</generateApiTests>
 						</configuration>
 					</execution>
 				</executions>
@@ -132,5 +136,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
