--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,14 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:mem:E_COMMERCE
     driverClassName: org.h2.Driver
-    username: sa
-    password: password
+    username: admin
+    password: admin
   h2:
     console:
       enabled: true
+  jpa:
+    hibernate:
+      ddl-auto: none
+server:
+  port: 9000
